[package]
name = "emulator"
version = "0.1.0"
authors = ["Dan Glushko <danmatrix94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lr35902 = { path = "../lr35902", features = ["instruction_table"] }
memory_bus = { path = "../memory_bus" }