[package]
name = "lr35902"
version = "0.1.0"
authors = ["Dan Glushko <danmatrix94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
instruction_table = []
default = []

[dependencies]
memory_bus = { path = "../memory_bus" }