[package]
name = "ppu"
version = "0.1.0"
authors = ["Dan Glushko <danmatrix94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory_bus = { path = "../memory_bus" }
lr35902 = { path = "../lr35902" }
minifb = "0.13"